--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,10 +11,19 @@ Author URI: http://www.qsstechnosoft.com/
 
 /* //////////////-----new clearfix---//////////////////// */
 
+@media screen and (min-width:1600px){
+	.container{width:1570px !important;}
+}
+
+.view_table table td label, .base_bg th label, .table_head tr th label{margin-left: 0px !important;}
+
 .clearfix:after {visibility: hidden;	display: block;	font-size: 0;content: " ";clear: both;height: 0;}
-
-
-html, body {width: 100%; height:100%;}
+.viewLoad{
+	max-height: 400px
+}
+div[data-reactroot]{min-height:100%;}
+.wrapper-inner{min-height: 100vh;}
+html, body {width: 100%; height:100%; overflow-x:hidden;}
 body {font-size: 14px;  color: #333; margin: 0;padding: 0; width: 100%; height:100%;}
 a {text-decoration: none;color: #004a98;}
 a:hover{text-decoration: none;color: #0b6acf;}
@@ -27,15 +36,37 @@ hr {height: 1px; background: #ccc;border: none;margin: 15px 0 15px 0;}
 .pos-relative-b{ position:relative;bottom:0;left:0;}
 .pos-fixed-b{ position:fixed;bottom:0;left:0;}
 
+input::-webkit-datetime-edit{ color: transparent; }
+
+/* Include this to make it visible when input is clicked */
+input:focus::-webkit-datetime-edit{ color: #000; }
+
+input[type="date"]::before { 
+	content: attr(data-placeholder);
+	width: 100%;
+}
+
+/* hide our custom/fake placeholder text when in focus to show the default
+ * 'mm/dd/yyyy' value and when valid to show the users' date of birth value.
+ */
+input[type="date"]:focus::before,
+input[type="date"]:valid::before { display: none }
+
+.imgbg{background-repeat:no-repeat !important; background-position:center !important;}
+legend{background:#fff; padding:0 10px !important;}
+.nav-justified{margin-bottom:20px !important;}
+.no-space li{padding:5px 0;}
+.control input[type=checkbox]{display:none;}
+.btn.focus, .btn:focus, .btn:hover{color:#fff !important;}
+
+
 .grey-wrapper {background-color: #F5F5F5;text-align: center;}
-/*.jt-shadow { box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset; -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset; -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset;}*/
 .offer_bg {background-image: url("../img/bg/bg_services.png");background-size: cover; padding: 10px 0 10px 0;}
 .signin_bg {background-image: url("../img/bg/signin_new.png");background-repeat: repeat; }
-
+.imgbg {background: url("../img/logo_inner.png"); height:30px; width:150px; margin-top:10px;}
 #wrapper { position:relative;}
 
-.warpper-inner{min-height: 100%;}
-.content-inside{padding-bottom: 50px;}
+.content-inside{padding-bottom: 50px; min-height:100vh}
 .footer {height: 50px;margin-top: -50px;}
 ul.list-style-disc > li {list-style-type:disc;}
 
@@ -50,13 +81,20 @@ ul.list-style-disc > li {list-style-type:disc;}
 
 /*////////////////////////------pddn------ /////////////////////////////*/
 
+ .filter_bg .list-hover li{ cursor:default; margin-bottom:2px; padding:5px 5px;}
+.filter_bg .list-hover li:hover{ color:#004A98; background:#e5e5ff; }
+
+
+
 .pddn-10-top {padding-top: 10px}.pddn-20-top {padding-top: 20px}.pddn-30-top {padding-top: 30px}.pddn-40-top {padding-top: 40px}
 .pddn-50-top {padding-top: 50px}.pddn-60-top {padding-top: 60px}.pddn-70-top {padding-top: 70px}.pddn-80-top {padding-top: 80px}
 .pddn-90-top {padding-top: 90px}.pddn-100-top {padding-top: 100px}.pddn-150-top {padding-top: 150px}.pddn-200-top {padding-top: 200px}
 
 .pddn-10-btm {padding-bottom: 10px}.pddn-20-btm {padding-bottom: 20px}.pddn-30-btm {padding-bottom: 30px}.pddn-40-btm {padding-bottom: 40px}.pddn-50-btm {padding-bottom: 50px}.pddn-60-btm {padding-bottom: 60px}.pddn-70-btm {padding-bottom: 70px}.pddn-80-btm {padding-bottom: 80px}.pddn-90-btm {padding-bottom: 90px}.pddn-100-btm {padding-bottom: 100px}.pddn-150-btm {padding-bottom: 150px}.pddn-200-btm {padding-bottom: 200px}
 
-
+.circle-wrapper{
+	float: right;
+}
 
 .pddn-25-btm {padding-bottom: 25px}
 .padding-20-all{padding:10px;}
@@ -83,7 +121,7 @@ ul.list-style-disc > li {list-style-type:disc;}
 .btn_right_margin{ margin-right:15px;}
 .btn_right_no_margin{margin-right: -10px;}
 /*////////////////////////------color------ /////////////////////////////*/
-
+#date input {float: left; width: 100%;  font-size: 12px ;  padding: 6px;}
 .base_color{color:#004a98;}
 .black-color{color:#000;}
 .white-color{color:#fff;}
@@ -135,7 +173,7 @@ ul.list-style-disc > li {list-style-type:disc;}
 .right-inner-addon input {padding-right: 25px !important; }
 .right-inner-addon i {position: absolute;right: 0px;padding: 10px 12px;pointer-events: none;color:#666 ;}
 
-.ht{height:auto}
+
 /*////////////////////////------custom scroll------ /////////////////////////////*/
 /*
 ::-webkit-scrollbar {width: 6px;} 
@@ -175,11 +213,10 @@ a.hiddenanchor{display: none;}
 
 #wrapper:before { content: '\200B';  display: inline-block;  height: 100%;vertical-align: middle; }
 
-#register,#login{ width:100%; padding:30px; background:#ffffff; }
+#register{ width:100%; padding:30px; background:#ffffff; }
 
 #register{z-index: 22; margin-top: 15%; height:434px; width:556px; display:cell;}
 
-#login{  z-index: 22; min-height:320px; vertical-align:middle;   display:cell;  }
 
 #login label ,#register label{display: inline-block; max-width: 100%; margin-bottom: 0px;font-weight: 500;}
 #login .signin_label{ padding-top:15px;}
@@ -193,9 +230,7 @@ a.hiddenanchor{display: none;}
 
 /*////////////////////////------body_section  global------ /////////////////////////////*/
 
-.body_section{ margin:0 auto; margin:25px 0 0 0;}
-
-
+.body_section{ margin:0 auto; margin:25px 0 0 0;} 
 
 
 fieldset.scheduler-border {border: 1px solid #ccc !important; margin: 0 0 1.5em 0 !important; border-radius: 5px; 
@@ -206,8 +241,12 @@ padding: 15px 20px 15px 20px;
 .scheduler-border  label{ font-weight: bold  !important; text-align:left  !important; font-size:14px; }
 legend.scheduler-border { text-transform:uppercase !important;font-weight: bold !important;text-align: left !important;color:#004a98 !important; font-size:16px;}
 
-/*////////////////////////------Packaging------ /////////////////////////////*/
+/********--------------Login-----------***********/
+#login{max-width:500px; position: absolute; left:50%; top:50%; height: 320px; margin: -160px 0 0 -250px;}
 
+/*////////////////////////------Packaging------ /////////////////////////////*/
+.base_bg th label{  margin-left: 0px !important;}
+.table_head tr th label{margin-left: 5px !important;}
 .table th,td{ font-weight:300px !important; font-size:12px; white-space: nowrap;  overflow: hidden;  text-overflow: ellipsis;}
 
 /*.set-password .form-horizontal .form-group {padding-right: 15px !important; padding-left: 15px !important;}*/
@@ -265,7 +304,7 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 .view_table table { border-top: 0px solid #f3f3f3;}
 .view_table table td{font-weight:300 !important; font-size:12px !important; color:#000; white-space: nowrap;  overflow: hidden;  text-overflow: ellipsis;}
 .view_table table thead{ cursor:pointer;}
-/*.view_table table td label{margin-left: 6px;}*/
+.view_table table td label{margin-left: 6px;}
 .filter-btn button{margin-right: 10px !important;}
 
 .side-filter input, select, textarea{height: 34px;padding: 6px 12px;font-size: 14px;line-height: 1.42857143;color: #555;background-color: #fff;background-image: none;border: 1px solid #ccc;border-radius: 4px;-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);box-shadow: inset 0 1px 1px rgba(0,0,0,.075);-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;}
@@ -281,9 +320,8 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 .filter_bg ul, ul li .control{ margin-bottom:10px;  font-weight:400 !important;   font-size:14px;}
 .filter_bg  #search {padding-top: 25px;}
 .filter_bg .scroll{ overflow:scroll; height:200px; overflow-x:hidden;}
-.filter_bg .ht{height:auto}
 .side-filter .head_bg{background: #e5e5ff;color: #000; padding:10px 20px; margin:0px -20px 25px -20px !important; height:30px; }
-.imgbg{background: url("../img/logo_inner.png"); height:30px; width:150px; margin-top:10px;}
+
 /*////////////////////////------shipment------ /////////////////////////////*/
 .confirm_shipment{ margin-top: 2%; min-width:300px; }
 .confirm_shipment .form-group { margin-bottom:0px !important;}
@@ -319,14 +357,14 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 .container_detils{margin-top: 2%; }
 .container_detils .tab-bg{ background:#f4f4f4; margin-bottom:10px; margin-top: 10px;border-bottom: 1px solid #333; cursor:pointer;}
 .container_detils .sameHeight{height:405px; min-width:300px; }
-.container_detils .label_details .sameHeight{height:305px; }
+.container_detils .label_details .sameHeight{height:365px; overflow: inherit;}
 .container_detils .panel-group .panel{border-radius: 0px;}
 .container_detils .panel-default { border-color: #ddd;border-radius: 0px;}
 .container_detils .panel {margin-bottom: 20px;background-color: #fff; border: 0px solid transparent; border-radius: 0px; webkit-box-shadow: 0 0px 0px rgba(0,0,0,.05);box-shadow: 0 0px 0px rgba(0,0,0,.05);}
 .container_detils .panel-default > .panel-heading{color: #004a98;background-color: #f5f5f5; border-bottom:1px solid #fff; text-decoration:none; cursor:pointer;border-radius: 0px;}
 .container_detils .panel-default > .panel-heading a:focus,.panel-heading a:active{text-decoration:none;}
 .container_detils .panel-default > .panel-heading i{color:#333;}
-.container_detils .sameHeight{height:500px;}
+.container_detils .sameHeight{height:500px; overflow:auto}
 .container_detils .textarea-note{height:200px; resize:none;}
 .container_detils .more_load{background:#f9f9f9; color:red; padding:4px; text-align:center;}
 .container_detils .arrow-btn{ vertical-align:middle; padding-top:50%; text-align:center;}
@@ -344,10 +382,10 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 .admin .horizontallLine {border-bottom: 1px solid #ccc; min-height:1px;  margin: 32px -36px !important;   width: auto;}
 .admin .textarea{ height:120px;  resize: none;}
 /*////////////////////////------media------ /////////////////////////////*/
-#date input {float: left; width: 100%;  font-size: 12px ;  padding: 6px;}
 
-
-
+@media screen and (max-width:600px){
+	#login{margin: -160px 10% 0; left: 0; max-width: inherit; min-width: inherit; width: 80%}
+}
 
 @media (min-width: 100px) and (max-width: 768px) {
 #filter-grid{margin-left:0px; }
@@ -359,8 +397,7 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 .edit_Packaging  .col-md-7 {width: 95.5%;}
 .edit_Packaging  .col-md-1 {padding:0px; width: 2.5%; padding-top:4px;}
 .col-xs-1{padding-right: 0px;padding-left: 0px; padding-top:5px;}
-.padding-top-btm-xs-sm{ padding-top:10px!important;}
-#login .signin_label{ padding-top:0px; vertical-align:middle;}	
+.padding-top-btm-xs-sm{ padding-top:10px!important;}	
 .container_detils .label_details .sameHeight { height: auto;}
 }
 @media (min-width: 480px) and (max-width: 768px) {
@@ -373,7 +410,7 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 }
 
 @media (min-width: 320px) and (max-width: 768px) {
-.padding-top-btm-xs{ padding:10px !important;}
+.padding-top-btm-xs{ padding:10px px !important;}	
 .margin-left-xs{ margin-left:15px !important;}	
 .padding-top-btm-xs{ padding-top:10px !important; }
 .inventory_card  h5{text-align:center;}
@@ -387,7 +424,7 @@ legend.scheduler-border {font-size: 14px;}
 .confirm_shipment .sameHeight-International,.confirm_shipment .sameHeight-Domestic{ height:100%;}
 .confirm_Packaging  .sameHeight{height:100%;}
 .shipment .sameHeight{height:100%;}
-#login{  z-index: 22; height:100%; min-width:300px; display:cell;  vertical-align:middle;  }
+#login{padding: 15px; width:90%; margin: -160px 5% 0 5%}
 }
 @media (min-width: 900px) and (max-width: 1200px) {
 
@@ -413,15 +450,14 @@ legend.scheduler-border {font-size: 14px;}
 .edit_Packaging fieldset.scheduler-border {padding: 15px 5px 15px 20px;}
 .shipment_edit fieldset.scheduler-border {padding: 15px 5px 15px 20px;}
 }
-@media (min-width: 1200px) and (max-width: 1900px) {
+@media (min-width: 1200px) and (max-width: 1800px) {
 .edit_Packaging fieldset.scheduler-border {padding: 15px 5px 15px 20px;}
 .shipment_edit fieldset.scheduler-border {padding: 15px 5px 15px 20px;}
 }
+
+
 @media (min-width: 1200px) {
     .col-lg-2 {
         width: 15.66666667%;
     }
 }
-
-       
-
