--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -12,9 +12,9 @@ Author URI: http://www.qsstechnosoft.com/
 /* //////////////-----new clearfix---//////////////////// */
 
 .clearfix:after {visibility: hidden;	display: block;	font-size: 0;content: " ";clear: both;height: 0;}
-.viewLoad{
+/*.viewLoad{
 	max-height: 400px
-}
+}*/
 
 html, body {width: 100%; height:100%;}
 th {position: relative; top:0px}
@@ -24,7 +24,13 @@ a:hover{text-decoration: none;color: #0b6acf;}
 p {margin: 0 0 15px 0;   display: block;}
 hr {height: 1px; background: #ccc;border: none;margin: 15px 0 15px 0;}
 .loadedContent {
-	height : 600px
+	height : 450px
+}
+.dataTables_info{
+	display: none;
+}
+.dataTables_paginate {
+	display: none;
 }
 .underline{text-decoration:underline;}
 .bold{ font-weight:bold;}
