--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -395,6 +395,10 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 .admin .textarea{ height:120px;  resize: none;}
 /*////////////////////////------media------ /////////////////////////////*/
 
+.custom-LABEL p{
+	margin-bottom : 2px !important
+}
+
 @media (min-width: 100px) and (max-width: 768px) {
 #filter-grid{margin-left:0px; }
 #filter-menu{min-width:220px; width:100%; height:100%; float:left;}
