--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -93,9 +93,14 @@ ul.list-style-disc > li {list-style-type:disc;}
 
 .text_left{ text-align:left !important;}.text_right{ text-align:right !important;}.text_center{ text-align:center !important;}.text_justify{ text-align:justify !important;}
 
+
+#hide4{ margin-bottom: 10px;}
+#hide4 a{background: #e5e5ff;color: #616161;padding: 2px 10px;border-radius: 2px;text-decoration: none; line-height: 22px;}
+
+
 /*////////////////////////------pddn------ /////////////////////////////*/
 
- .filter_bg .list-hover li{ cursor:default; margin-bottom:2px; padding:5px 5px;}
+.filter_bg .list-hover li{ cursor:default; margin-bottom:2px; padding:5px 5px;}
 .filter_bg .list-hover li:hover{ color:#004A98; background:#e5e5ff; }
 
 
@@ -322,7 +327,7 @@ legend.scheduler-border { text-transform:uppercase !important;font-weight: bold 
 .view_table table td{font-weight:300 !important; font-size:12px !important; color:#000; white-space: nowrap;  overflow: hidden;  text-overflow: ellipsis;}
 .view_table table thead{ cursor:pointer;}
 .view_table table td label{margin-left: 6px;}
-.filter-btn button{margin-right: 10px !important;}
+.filter-btn button{margin-right: 10px !important;padding: 3px 5px; font-size: 11px;border-radius: 3px;margin-bottom: 10px;  }
 
 .side-filter input, select, textarea{height: 34px;padding: 6px 12px;font-size: 14px;line-height: 1.42857143;color: #555;background-color: #fff;background-image: none;border: 1px solid #ccc;border-radius: 4px;-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);box-shadow: inset 0 1px 1px rgba(0,0,0,.075);-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;}
 .side-filter .menu-bg{padding:5px 20px ;height:50px; width:100%;background-color: #f5f5f5;border: 1px solid #e3e3e3;-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);box-shadow: inset 0 1px 1px rgba(0,0,0,.05);}
